@@ -9,7 +9,7 @@ import io.swagger.v3.oas.models.servers.Server;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
-import java.util.List;
+import java.util.Arrays;
 
 @Configuration
 public class SwaggerConfig {
@@ -21,8 +21,8 @@ public class SwaggerConfig {
                 .title("Hostel Roommate Compatibility Matcher API")
                 .description("API for managing hostel roommate compatibility matching")
                 .version("1.0"))
-            .servers(List.of(
-                new Server().url("https://9029.408procr.amypo.ai/").description("Production Server"),
+            .servers(Arrays.asList(
+                new Server().url("https://9029.408procr.amypo.ai/").description("Production Server")
             ))
             .addSecurityItem(new SecurityRequirement().addList("Bearer Authentication"))
             .components(new Components()
